--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlashCards</title>
+    <!-- Optional: Add this meta tag with your GitHub repo (owner/repo) for automatic bundled set discovery -->
+    <!-- <meta name="github-repo" content="username/FlashCards"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -28,7 +30,7 @@
                 </div>
             </div>
             
-            <div class="version-info">v0.1.1</div>
+            <div class="version-info">v0.1.2</div>
         </div>
 
         <!-- Create/Edit Set View -->
