simplify bundling sets method to just building a js file from the jsons

--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlashCards</title>
-    <!-- Optional: Add this meta tag with your GitHub repo (owner/repo) for automatic bundled set discovery -->
-    <!-- <meta name="github-repo" content="username/FlashCards"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -169,6 +167,7 @@
         </div>
     </div>
 
+    <script src="bundled-sets.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
