separate bundled sets from user sets in homepage

--- a/index.html
+++ b/index.html
@@ -22,13 +22,17 @@
             <input type="file" id="importFileInput" accept=".json" style="display: none;">
             
             <div class="sets-container">
+                <div id="bundledSetsContainer" style="display: none;">
+                    <h2>Bundled Sets</h2>
+                    <div id="bundledSetsList" class="sets-list"></div>
+                </div>
                 <h2>Your Sets</h2>
                 <div id="setsList" class="sets-list">
                     <p class="empty-message">No sets yet. Create your first set to get started!</p>
                 </div>
             </div>
             
-            <div class="version-info">v0.1.4</div>
+            <div class="version-info">v0.1.5</div>
         </div>
 
         <!-- Create/Edit Set View -->
