--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             </div>
             
             <div class="version-info">v0.2.0</div>
+            <img src="img/sandy-bowling-approved.png" alt="SANDY BOWLING APPROVED" class="gold-stamp">
         </div>
 
         <!-- Create/Edit Set View -->
