--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>FlashCards</title>
+    <link rel="icon" type="image/x-icon" href="img/sandy-bowling-approved.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -39,7 +40,6 @@
             </div>
             
             <div class="version-info">v0.2.1</div>
-            <img src="img/sandy-bowling-approved.png" alt="SANDY BOWLING APPROVED" class="gold-stamp">
         </div>
 
         <!-- Create/Edit Set View -->
