add year option and display rounds and year on homepage of set

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
             </div>
 
             <div class="form-group">
+                <label for="setYear">Year (optional)</label>
+                <input type="number" id="setYear" placeholder="e.g., 2024" min="1900" max="2100">
+            </div>
+
+            <div class="form-group">
                 <label class="checkbox-label">
                     <input type="checkbox" id="roundsEnabled">
                     <span>Enable Rounds (group cards into rounds)</span>
