added "DO NOT ACCEPT" field

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
             
-            <div class="version-info">v0.2.4</div>
+            <div class="version-info">v0.2.5</div>
         </div>
 
         <!-- Create/Edit Set View -->
@@ -135,6 +135,7 @@
                 <div id="flashcard" class="flashcard">
                     <div class="card-front">
                         <div id="hintsFront" class="card-hints"></div>
+                        <div id="doNotAcceptFront" class="card-do-not-accept"></div>
                         <div class="card-label">
                             <span>Question</span>
                         </div>
@@ -142,6 +143,7 @@
                     </div>
                     <div class="card-back">
                         <div id="hintsBack" class="card-hints"></div>
+                        <div id="doNotAcceptBack" class="card-do-not-accept"></div>
                         <div class="card-label">Answer</div>
                         <div id="answerText" class="card-content"></div>
                         <div id="acceptedAnswersList" class="accepted-answers-list"></div>
