add multiple choice support

--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
             </div>
 
             <div class="form-group">
+                <label for="setModeSelect">Set Mode</label>
+                <select id="setModeSelect" class="select-input">
+                    <option value="normal">Normal</option>
+                    <option value="multipleChoice">Multiple Choice</option>
+                </select>
+                <small style="color: #999; display: block; margin-top: 4px;">Mode can only be changed before adding the first card</small>
+            </div>
+
+            <div class="form-group">
                 <label class="checkbox-label">
                     <input type="checkbox" id="roundsEnabled">
                     <span>Enable Rounds (group cards into rounds)</span>
