fixes and stuff

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
             
-            <div class="version-info">v0.2.6</div>
+            <div class="version-info">v0.2.8</div>
         </div>
 
         <!-- Create/Edit Set View -->
@@ -176,6 +176,7 @@
                     <button id="wrongBtn" class="btn btn-danger">✗ Wrong</button>
                     <button id="rightBtn" class="btn btn-success">✓ Right</button>
                 </div>
+                <button id="continueBtn" class="btn btn-primary" style="display: none;">Continue</button>
                 <div id="hintButton" class="hint-button" style="display: none;">
                     <button id="askForHintBtn" class="btn btn-secondary">Add Next Question</button>
                 </div>
