move mc options to below the card

--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="mcOptionsContainer" class="mc-options-container-external" style="display: none;"></div>
             </div>
 
             <div class="study-actions">
